# WP_Fleet_Ops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
charts/wp-fleet-ops/: Chart.yaml  values.yaml
charts/wp-fleet-ops/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
charts/wp-fleet-ops/templates/tests/: test-connection.yaml
docs/: maintenance-cron-prompt.md
templates/: index.html
tests/: test_api.py  test_core.py
wp_fleet_ops/: __init__.py  checks.py  fleet.py  main.py  storage.py
