[project]
name = "wp-fleet-ops"
version = "0.1.0"
description = "WP FleetOps: combined WordPress client care monitoring and fleet operations dashboard"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
wp-fleet-ops = "wp_fleet_ops.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wp_fleet_ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
